Use gh-pages deploy

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dopublish": "npm test;gulp build;npm run tag;npm publish lib --tag rc;",
     "lint": "gulp eslint",
     "serve": "jekyll serve --config _config.yml,_config.dev.yml",
+    "deploy": "gh-pages -b chinese-translation-releases -d lib",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "mocha --compilers js:@babel/register src/**/*.unit.js -b --exit",
     "test:unit:watch": "mocha --compilers js:@babel/register src/**/*.unit.js d--watch",
@@ -120,6 +121,7 @@
     "fetch-mock": "^7.3.6",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.0.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
