--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "lint"
   ],
   "scripts": {
-    "build": "esdoc;gulp build",
+    "build": "esdoc && gulp build",
     "watch": "babel -w ./src/ --out-dir ./lib/",
-    "rebuild": "rm -rf node_modules;npm install;gulp build",
+    "rebuild": "rm -rf node_module && npm install && gulp build",
     "tag": "VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]');git add -A; git commit -m \"Build $Version\";git push origin 4.x;git tag v$VERSION;git push origin --tags;",
-    "dopublish": "npm test;gulp build;npm run tag;npm publish lib --tag rc;",
+    "dopublish": "npm test && gulp build && npm run tag && npm publish lib --tag rc;",
     "lint": "gulp eslint",
     "serve": "jekyll serve --config _config.yml,_config.dev.yml",
     "deploy": "gh-pages -b chinese-translation-releases -d lib",
