--- a/app/bootswatch/package.json
+++ b/app/bootswatch/package.json
@@ -2,7 +2,7 @@
   "_args": [
     [
       "bootswatch@4.3.1",
-      "/Users/xiyangliu/Workspace/formio.js"
+      "D:\\github\\formio.js"
     ]
   ],
   "_development": true,
@@ -27,7 +27,7 @@
   ],
   "_resolved": "https://registry.npmjs.org/bootswatch/-/bootswatch-4.3.1.tgz",
   "_spec": "4.3.1",
-  "_where": "/Users/xiyangliu/Workspace/formio.js",
+  "_where": "D:\\github\\formio.js",
   "author": {
     "name": "Thomas Park"
   },
