--- a/app/bootswatch/package.json
+++ b/app/bootswatch/package.json
@@ -1,40 +1,36 @@
 {
-  "_args": [
-    [
-      "bootswatch@4.3.1",
-      "F:\\project-repository\\formio.js"
-    ]
-  ],
-  "_development": true,
-  "_from": "bootswatch@4.3.1",
+  "_from": "bootswatch@^4.3.1",
   "_id": "bootswatch@4.3.1",
   "_inBundle": false,
   "_integrity": "sha512-kNdpo/TnhO++aic1IODLIe1V0lx6pXwHMpwXMacpANDnuVDtgU1MUgUbVMC3rSWm4UcbImfwPraNYgjKDT0BtA==",
   "_location": "/bootswatch",
   "_phantomChildren": {},
   "_requested": {
-    "type": "version",
+    "type": "range",
     "registry": true,
-    "raw": "bootswatch@4.3.1",
+    "raw": "bootswatch@^4.3.1",
     "name": "bootswatch",
     "escapedName": "bootswatch",
-    "rawSpec": "4.3.1",
+    "rawSpec": "^4.3.1",
     "saveSpec": null,
-    "fetchSpec": "4.3.1"
+    "fetchSpec": "^4.3.1"
   },
   "_requiredBy": [
     "#DEV:/"
   ],
   "_resolved": "https://registry.npmjs.org/bootswatch/-/bootswatch-4.3.1.tgz",
-  "_spec": "4.3.1",
-  "_where": "F:\\project-repository\\formio.js",
+  "_shasum": "be54748b420a1962dbcf9782605aac092f842e38",
+  "_spec": "bootswatch@^4.3.1",
+  "_where": "/Users/xiyangliu/Workspace/formio.js",
   "author": {
     "name": "Thomas Park"
   },
   "bugs": {
     "url": "https://github.com/thomaspark/bootswatch/issues"
   },
+  "bundleDependencies": false,
   "dependencies": {},
+  "deprecated": false,
   "description": "Bootswatch is a collection of themes for Bootstrap.",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
